# 09-Web-HW-2

./: README.md  authors.json  main.py  pyproject.toml  quotes.json  settings.py
